propertyPath in update parameter response